--- a/preferences.html
+++ b/preferences.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="preferences.html">Preferences</a></li>
+        <li><a href="preferences.html" class="active">Preferences</a></li>
         <li><a href="aboutus.html">About Us</a></li>
       </ul>
     </nav>
