--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="preferences.html">Preferences</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="aboutus.html" class="active">About Us</a></li>
       </ul>
     </nav>
   </header>
