--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="preferences.html">Preferences</a></li>
         <li><a href="aboutus.html">About Us</a></li>
       </ul>
