--- a/aboutus.html
+++ b/aboutus.html
@@ -3,27 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - My Professional Website</title>
+  <title>About the Hive - Manchester Bee</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="preferences.html">Preferences</a></li>
-        <li><a href="aboutus.html" class="active">About Us</a></li>
+        <li><a href="index.html">Hive</a></li>
+        <li><a href="preferences.html">Buzz Settings</a></li>
+        <li><a href="aboutus.html" class="active">About the Hive</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="about-us">
-    <h1>About Us</h1>
-    <p>We are a team committed to providing exceptional services and experiences. Our goal is to help you manage your preferences and make your experience seamless.</p>
+    <h1>About the Hive</h1>
+    <p>The Manchester Bee symbolizes resilience, community, and hard work. Join us in celebrating the buzz of Manchester.</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 My Professional Website</p>
+    <p>&copy; 2025 Manchester Bee Hive</p>
   </footer>
 </body>
 </html>
