--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Professional Website</title>
+  <title>Manchester Bee Hive</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="preferences.html">Preferences</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="index.html" class="active">Hive</a></li>
+        <li><a href="preferences.html">Buzz Settings</a></li>
+        <li><a href="aboutus.html">About the Hive</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="landing-page">
-    <h1>Welcome to Our Website</h1>
-    <p>Discover more about what we do and how we can help you.</p>
-    <a href="preferences.html" class="cta-button">Set Your Preferences</a>
+    <h1>Welcome to the Hive</h1>
+    <p>Discover the buzz and explore the spirit of the Manchester Bee.</p>
+    <a href="preferences.html" class="cta-button">Customize Your Buzz</a>
   </section>
 
   <footer>
-    <p>&copy; 2025 My Professional Website</p>
+    <p>&copy; 2025 Manchester Bee Hive</p>
   </footer>
 </body>
 </html>
