--- a/preferences.html
+++ b/preferences.html
@@ -3,38 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Preferences - My Professional Website</title>
+  <title>Buzz Settings - Manchester Bee</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="preferences.html" class="active">Preferences</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="index.html">Hive</a></li>
+        <li><a href="preferences.html" class="active">Buzz Settings</a></li>
+        <li><a href="aboutus.html">About the Hive</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="preferences-page">
-    <h1>Your Preferences</h1>
+    <h1>Buzz Settings</h1>
     <form>
-      <label for="theme">Choose a theme:</label>
+      <label for="theme">Choose Your Hive Theme:</label>
       <select id="theme" name="theme">
-        <option value="light">Light</option>
-        <option value="dark">Dark</option>
+        <option value="yellow">Yellow (Classic)</option>
+        <option value="black">Black (Night)</option>
+        <option value="gold">Gold (Premium)</option>
       </select>
 
-      <label for="notifications">Enable Notifications:</label>
+      <label for="notifications">Enable Hive Alerts:</label>
       <input type="checkbox" id="notifications" name="notifications" checked>
 
-      <button type="submit">Save Preferences</button>
+      <button type="submit">Save Settings</button>
     </form>
   </section>
 
   <footer>
-    <p>&copy; 2025 My Professional Website</p>
+    <p>&copy; 2025 Manchester Bee Hive</p>
   </footer>
 </body>
 </html>
