--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">Hive</a></li>
         <li><a href="preferences.html">Buzz Settings</a></li>
         <li><a href="aboutus.html" class="active">About the Hive</a></li>
+        <li><a href="admin.html">Admin</a></li>
       </ul>
     </nav>
   </header>
