--- a/preferences.html
+++ b/preferences.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">Hive</a></li>
         <li><a href="preferences.html" class="active">Buzz Settings</a></li>
         <li><a href="aboutus.html">About the Hive</a></li>
+        <li><a href="admin.html">Admin</a></li>
       </ul>
     </nav>
   </header>
@@ -35,7 +36,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Manchester Bee Hive</p>
+    <p>&copy; 2025 Bee Hive</p>
   </footer>
 </body>
 </html>
