--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Manchester Bee Hive</title>
+  <title>The Hive - Manchester Bee</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,13 +13,14 @@
         <li><a href="index.html" class="active">Hive</a></li>
         <li><a href="preferences.html">Buzz Settings</a></li>
         <li><a href="aboutus.html">About the Hive</a></li>
+        <li><a href="admin.html">Admin</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="landing-page">
     <h1>Welcome to the Hive</h1>
-    <p>Discover the buzz and explore the spirit of the Manchester Bee.</p>
+    <p>Join the buzz and become a part of the Manchester Bee community.</p>
     <a href="preferences.html" class="cta-button">Customize Your Buzz</a>
   </section>
 
