--- a/admin.html
+++ b/admin.html
@@ -45,7 +45,6 @@
           <td>Worker</td>
           <td><button>Remove</button></td>
         </tr>
-        <!-- Add more rows as needed -->
       </tbody>
     </table>
 
@@ -58,7 +57,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Bee Hive</p>
+    <p>&copy; 2025 Manchester Bee Hive</p>
   </footer>
 </body>
 </html>
