--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Hive - Manchester Bee</title>
+  <title>Welcome to the Hive - Manchester Bee</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,8 +20,8 @@
 
   <section class="landing-page">
     <h1>Welcome to the Hive</h1>
-    <p>Join the buzz and become a part of the Manchester Bee community.</p>
-    <a href="preferences.html" class="cta-button">Customize Your Buzz</a>
+    <p>Join the buzz and be part of Manchester's vibrant community.</p>
+    <a href="aboutus.html" class="cta-button">Discover the Hive</a>
   </section>
 
   <footer>
