--- a/preferences.html
+++ b/preferences.html
@@ -36,7 +36,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Manchester Bee Hive</p>
+    <p>&copy; 2025 Bee Hive</p>
   </footer>
 </body>
 </html>
