--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Manchester Bee Hive</p>
+    <p>&copy; 2025 Bee Hive</p>
   </footer>
 </body>
 </html>
