--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Hive Control - Manchester Bee</title>
+  <title>Admin Login - Manchester Bee</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,41 +19,24 @@
   </header>
 
   <section class="admin-page">
-    <h1>Admin Hive Control</h1>
-    <p>Welcome, Queen Bee! Manage the hive's settings and activity here.</p>
-
-    <h2>Manage Users</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>User ID</th>
-          <th>Name</th>
-          <th>Role</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>001</td>
-          <td>WorkerBee123</td>
-          <td>Worker</td>
-          <td><button>Remove</button></td>
-        </tr>
-        <tr>
-          <td>002</td>
-          <td>HoneyGatherer89</td>
-          <td>Worker</td>
-          <td><button>Remove</button></td>
-        </tr>
-      </tbody>
-    </table>
-
-    <h2>Hive Activity</h2>
-    <ul>
-      <li>5 new users joined today</li>
-      <li>10 honeycombs harvested</li>
-      <li>3 Queen Bee alerts sent</li>
-    </ul>
+    <h1>Admin Login</h1>
+    <form>
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" placeholder="Enter your username" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+      </div>
+      <div class="button-group">
+        <button type="submit" class="btn-login">Login</button>
+      </div>
+      <div class="links">
+        <a href="#" class="forgot-password">Forgot Password?</a>
+        <a href="#" class="create-account">Create an Account</a>
+      </div>
+    </form>
   </section>
 
   <footer>
