--- a/admin.html
+++ b/admin.html
@@ -33,14 +33,14 @@
         <button type="submit" class="btn-login">Login</button>
       </div>
       <div class="links">
-        <a href="#" class="forgot-password">Forgot Password?</a>
-        <a href="#" class="create-account">Create an Account</a>
-      </div>
+        <a href="forgot-password.html">Forgot Password?</a>
+        <a href="create-account.html">Create an Account</a>
+      </div>      
     </form>
   </section>
 
   <footer>
-    <p>&copy; 2025 Manchester Bee Hive</p>
+    <p>&copy; 2025 Bee Hive</p>
   </footer>
 </body>
 </html>
