--- a/create-account.html
+++ b/create-account.html
@@ -8,6 +8,19 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Header with Navigation -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">Hive</a></li>
+        <li><a href="preferences.html">Buzz Settings</a></li>
+        <li><a href="aboutus.html">About the Hive</a></li>
+        <li><a href="admin.html">Admin</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Content for Create Account -->
   <div class="container">
     <h2>Create an Account</h2>
     <form id="createAccountForm">
@@ -33,6 +46,13 @@
     </form>
   </div>
 
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Your Website Name. All rights reserved.</p>
+    <p><a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a></p>
+  </footer>
+
+  <!-- Script to handle form submission -->
   <script>
     document.getElementById("createAccountForm").addEventListener("submit", function(event) {
       event.preventDefault();
