--- a/create-account.html
+++ b/create-account.html
@@ -1,151 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Create an Account</title>
-  <!-- Link to the external CSS -->
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Create an Account</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header with Navigation -->
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Hive</a></li>
-        <li><a href="preferences.html">Buzz Settings</a></li>
-        <li><a href="aboutus.html">About the Hive</a></li>
-        <li><a href="admin.html">Admin</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Header with Navigation -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Hive</a></li>
+                <li><a href="preferences.html">Buzz Settings</a></li>
+                <li><a href="aboutus.html">About the Hive</a></li>
+                <li><a href="admin.html">Admin</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- Main Content for Create Account -->
-  <div class="container create-account-page">
-    <h2>Create an Account</h2>
-    <form id="createAccountForm">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-      <div class="form-group">
-        <label for="confirmPassword">Confirm Password</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" required>
-      </div>
-      <div class="form-group">
-        <button type="submit">Submit</button>
-      </div>
-    </form>
+    <!-- Main Content for Create Account -->
+    <div class="container create-account-page">
+        <h2>Create an Account</h2>
+        <form id="createAccountForm">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" required>
+            </div>
+            <div class="form-group">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
 
-    <!-- Product Key Input (Initially hidden) -->
-    <div id="productKeyContainer" class="hidden">
-      <h3>Enter Product Key</h3>
-      <div class="product-key-inputs">
-        <input type="text" maxlength="1" class="product-key-box" />
-        <input type="text" maxlength="1" class="product-key-box" />
-        <input type="text" maxlength="1" class="product-key-box" />
-        <input type="text" maxlength="1" class="product-key-box" />
-        <input type="text" maxlength="1" class="product-key-box" />
-        <input type="text" maxlength="1" class="product-key-box" />
-        <input type="text" maxlength="1" class="product-key-box" />
-        <input type="text" maxlength="1" class="product-key-box" />
-      </div>
-      <button id="submitProductKey">Submit</button>
+        <!-- Product Key Input (Initially hidden) -->
+        <div id="productKeyContainer" class="hidden">
+            <h3>Enter Registration Key</h3>
+            <div class="product-key-inputs">
+                <input type="text" maxlength="1" class="product-key-box" />
+                <input type="text" maxlength="1" class="product-key-box" />
+                <input type="text" maxlength="1" class="product-key-box" />
+                <input type="text" maxlength="1" class="product-key-box" />
+                <input type="text" maxlength="1" class="product-key-box" />
+                <input type="text" maxlength="1" class="product-key-box" />
+                <input type="text" maxlength="1" class="product-key-box" />
+                <input type="text" maxlength="1" class="product-key-box" />
+            </div>
+            <button id="submitProductKey" type="button">Submit</button>
+        </div>
     </div>
-  </div>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Your Website Name. All rights reserved.</p>
-    <p><a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a></p>
-  </footer>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Your Website Name. All rights reserved.</p>
+        <p><a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a></p>
+    </footer>
 
-  <!-- Script to handle form submission -->
-  <script>
-    document.getElementById("createAccountForm").addEventListener("submit", function(event) {
-      event.preventDefault();
-
-      const username = document.getElementById("username").value;
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const confirmPassword = document.getElementById("confirmPassword").value;
-
-      if (password !== confirmPassword) {
-        alert("Passwords do not match!");
-        return;
-      }
-
-      // Show product key input fields after form submission
-      const productKeyContainer = document.getElementById("productKeyContainer");
-      productKeyContainer.classList.remove('hidden');
-
-      const productKeyBoxes = document.querySelectorAll(".product-key-box");
-      const submitProductKeyButton = document.getElementById("submitProductKey");
-
-      // Auto-focus logic for product key inputs
-      productKeyBoxes.forEach((box, index) => {
-        box.addEventListener("input", (event) => {
-          const value = event.target.value;
-
-          // Move to the next box if a digit is entered
-          if (value.length === 1 && index < productKeyBoxes.length - 1) {
-            productKeyBoxes[index + 1].focus();
-          }
-
-          // Move focus to previous box if the user presses Backspace
-          if (value.length === 0 && index > 0) {
-            productKeyBoxes[index - 1].focus();
-          }
-        });
-      });
-
-      // Collect and validate the product key on submission
-      submitProductKeyButton.addEventListener("click", async () => {
-        const productKey = Array.from(productKeyBoxes)
-          .map((box) => box.value)
-          .join("");
-
-        if (productKey.length === 8) {
-          // Send account data to backend
-          const accountData = {
-            username: username,
-            email: email,
-            password: password,
-            product_key: productKey
-          };
-
-          try {
-            const response = await fetch("/create_account", {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json"
-              },
-              body: JSON.stringify(accountData)
-            });
-
-            const result = await response.json();
-
-            if (response.ok) {
-              alert(`Account created successfully!\n\nUsername: ${result.username}\nEmail: ${result.email}\nProduct Key: ${result.product_key}`);
-            } else {
-              alert(result.error || "Error creating account");
-            }
-          } catch (error) {
-            alert("An error occurred while creating the account.");
-          }
-        } else {
-          alert("Please fill all 8 boxes with valid digits.");
-        }
-      });
-    });
-  </script>
+    <!-- Include the JavaScript file -->
+    <script src="create-account.js"></script>
 </body>
 </html>
