--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,7 @@
 
   <section class="admin-page">
     <h1>Admin Login</h1>
-    <form>
+    <form id="loginForm">
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" id="username" name="username" placeholder="Enter your username" required>
@@ -32,10 +32,7 @@
       <div class="button-group">
         <button type="submit" class="btn-login">Login</button>
       </div>
-      <div class="links">
-        <a href="forgot-password.html">Forgot Password?</a>
-        <a href="create-account.html">Create an Account</a>
-      </div>      
+      <div id="error-message" class="error-message"></div>
     </form>
   </section>
 
@@ -43,6 +40,25 @@
     <p>&copy; 2025 Bee Hive</p>
   </footer>
 
-  <script src="validateUser.js"></script>
+  <script>
+    document.getElementById("loginForm").addEventListener("submit", function(event) {
+      event.preventDefault(); // Prevent the default form submission
+
+      // Get input values
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+
+      // Check credentials
+      if (username === "admin" && password === "miamimanny") {
+        // Redirect to the context file page if login is successful
+        window.location.href = "context-file.html";
+      } else {
+        // Display an error message if login fails
+        const errorMessage = document.getElementById("error-message");
+        errorMessage.textContent = "Invalid username or password. Please try again.";
+        errorMessage.style.color = "red";
+      }
+    });
+  </script>
 </body>
 </html>
