--- a/Website/admin.html
+++ b/Website/admin.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class = "container">
   <header>
     <nav>
       <ul>
@@ -60,5 +61,6 @@
       }
     });
   </script>
+</div>
 </body>
 </html>
