--- a/Website/adminpanel.html
+++ b/Website/adminpanel.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class = "container">
   <header>
     <nav>
       <ul>
@@ -27,5 +28,6 @@
   <footer>
     <p>&copy; 2025 Bee Hive</p>
   </footer>
+  </div>
 </body>
 </html>
