--- a/Website/create-account.html
+++ b/Website/create-account.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class = "container">
     <!-- Header with Navigation -->
     <header>
         <nav>
@@ -69,5 +70,6 @@
 
     <!-- Include the JavaScript file -->
     <script src="create-account.js"></script>
+    </div>
 </body>
 </html>
