--- a/Website/index.html
+++ b/Website/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class = "container">
   <header>
     <nav>
       <ul>
@@ -18,14 +19,17 @@
     </nav>
   </header>
 
+  <main>
   <section class="landing-page">
     <h1>Welcome to the Hive</h1>
     <p>Join the buzz and be part of Manchester's vibrant community.</p>
     <a href="aboutus.html" class="cta-button">Discover the Hive</a>
   </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 Bee Hive</p>
   </footer>
+  </div>
 </body>
 </html>
