<main> tags needed for formatting

--- a/Website/aboutus.html
+++ b/Website/aboutus.html
@@ -19,10 +19,12 @@
     </nav>
   </header>
 
-  <section class="about-us">
+  <main>
+    <section class="about-us">
     <h1>About the Hive</h1>
     <p>The Manchester Bee symbolizes resilience, community, and hard work. Join us in celebrating the buzz of Manchester.</p>
   </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 Bee Hive</p>
