--- a/Website/admin.html
+++ b/Website/admin.html
@@ -19,6 +19,7 @@
     </nav>
   </header>
 
+  <main>
   <section class="admin-page">
     <h1>Admin Login</h1>
     <form id="loginForm">
@@ -36,6 +37,7 @@
       <div id="error-message" class="error-message"></div>
     </form>
   </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 Bee Hive</p>
