--- a/Website/adminpanel.html
+++ b/Website/adminpanel.html
@@ -19,11 +19,13 @@
     </nav>
   </header>
 
+  <main>
   <section class="admin-page">
     <h1>Welcome to the Admin Panel</h1>
     <p>Manage your hive efficiently and effectively.</p>
     <!-- Add more admin functionalities here -->
   </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 Bee Hive</p>
