--- a/Website/preferences.html
+++ b/Website/preferences.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+  <div class = "container">
+    <header>
     <nav>
       <ul>
         <li><a href="index.html">Hive</a></li>
@@ -18,6 +19,7 @@
     </nav>
   </header>
 
+  <main>
   <section class="preferences-page">
     <h1>Buzz Settings</h1>
     <form>
@@ -34,9 +36,11 @@
       <button type="submit">Save Settings</button>
     </form>
   </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 Bee Hive</p>
   </footer>
+  </div>
 </body>
 </html>
