--- a/admin.html
+++ b/admin.html
@@ -12,8 +12,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Hive</a></li>
-        <li><a href="preferences.html">Buzz Settings</a></li>
-        <li><a href="aboutus.html">About the Hive</a></li>
+        <li><a href="preferences.html">Hive Settings</a></li>
         <li><a href="admin.html" class="active">Admin</a></li>
       </ul>
     </nav>
