--- a/create-account.html
+++ b/create-account.html
@@ -13,8 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Hive</a></li>
-                <li><a href="preferences.html">Buzz Settings</a></li>
-                <li><a href="aboutus.html">About the Hive</a></li>
+                <li><a href="preferences.html">Hive Settings</a></li>
                 <li><a href="admin.html">Admin</a></li>
             </ul>
         </nav>
