--- a/admin.html
+++ b/admin.html
@@ -8,11 +8,10 @@
 </head>
 <body>
   <div class = "container">
-  <header>
+  <header id="siteHeader">
     <nav>
       <ul>
         <li><a href="index.html">Hive</a></li>
-        <li><a href="preferences.html">Hive Settings</a></li>
         <li><a href="admin.html" class="active">Admin</a></li>
       </ul>
     </nav>
@@ -43,19 +42,29 @@
   </footer>
 
   <script>
-    document.getElementById("loginForm").addEventListener("submit", function(event) {
-      event.preventDefault(); // Prevent the default form submission
+    // Function to apply the theme
+    function applyTheme(theme) {
+      document.body.classList.remove('light-mode', 'dark-mode');
+      document.body.classList.add(`${theme}-mode`);
+      document.getElementById('siteHeader').classList.remove('light-mode', 'dark-mode');
+      document.getElementById('siteHeader').classList.add(`${theme}-mode`);
+    }
 
-      // Get input values
+    // Apply the saved theme on page load
+    document.addEventListener('DOMContentLoaded', () => {
+      const savedTheme = localStorage.getItem('hiveTheme') || 'light';
+      applyTheme(savedTheme);
+    });
+
+    document.getElementById("loginForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      // Check credentials
       if (username === "admin" && password === "miamimanny") {
-        // Redirect to the context file page if login is successful
         window.location.href = "context-file.html";
       } else {
-        // Display an error message if login fails
         const errorMessage = document.getElementById("error-message");
         errorMessage.textContent = "Invalid username or password. Please try again.";
         errorMessage.style.color = "red";
